--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, inital-scale=1.0">
   <title>Welcome</title>
-  <link href="css/main.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Welcome</h1>
-  <p>Content coming soon</p>
+  <h1>Howdy</h1>
+  <p>Welcome to my website!</p>
+  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 </html>
