--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, inital-scale=1.0">
-  <title>Welcome</title>
+  <title>Howdy</title>
+  <link rel="shortcut icon" href="img/favicon.ico">
   <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
