--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, inital-scale=1.0">
-  <title>Howdy</title>
+  <title>My Portfolio</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="css/styles.css" />
   <link rel="shortcut icon" href="img/favicon.ico">
-  <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Howdy</h1>
-  <p>Welcome to my website!</p>
+  <nav class="clearfix">
+  <h1>My Portfolio</h1>
+  <ul>
+     <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+     <li><a href="#">Contact</a></li>
+   </ul>
+  </nav>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 </html>
