--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
      <li><a href="#">Contact</a></li>
    </ul>
   </nav>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="Ice cream man dancing">
+  <!-- <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="Ice cream man dancing"> -->
 </body>
 </html>
