--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="shortcut icon" href="img/favicon.ico">
+  <script src="js/script.js" defer></script>
 </head>
 <body>
   <nav class="clearfix">
