--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
   <script src="js/script.js" defer></script>
 </head>
 <body>
-  <nav class="clearfix">
-  <h1>My Portfolio</h1>
-  <ul>
-     <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-     <li><a href="#">Contact</a></li>
-   </ul>
-  </nav>
+  <header class="clearfix">
+    <h1>My Portfolio</h1>
+    <nav role="navigation">
+      <ul>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   <!-- <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="Ice cream man dancing"> -->
 </body>
 </html>
