Added flexbox to navigation

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+  <!-- <link rel="stylesheet" type="text/css" href="css/reset.css"> -->
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="shortcut icon" href="img/favicon.ico">
   <script src="js/script.js" defer></script>
 </head>
 <body>
-  <header class="clearfix">
+  <header>
     <h1>My Portfolio</h1>
     <nav role="navigation">
       <ul>
@@ -22,6 +23,6 @@
       </ul>
     </nav>
   </header>
-  <!-- <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="Ice cream man dancing"> -->
+  <!-- <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="Icecream cone man dancing"> -->
 </body>
 </html>
