Updated responsive navigation

--- a/index.html
+++ b/index.html
@@ -9,25 +9,27 @@
   <!-- <link rel="stylesheet" type="text/css" href="css/reset.css"> -->
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="shortcut icon" href="img/favicon.ico">
-  <script src="js/script.js" defer></script>
+  <!-- <script src="js/script.js" defer></script> -->
 </head>
 <body>
-  <header>
-    <h1>My Portfolio</h1>
-    <nav role="navigation">
-      <ul>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div class="header">
+    <header>
+      <nav role="navigation">
+        <ul>
+          <li><a href="#">Logo</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
   <!-- <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="Icecream cone man dancing"> -->
   <main>
     <h2>Projects</h2>
     <div class="row">
-      <figure>
+      <figure class="main-fig">
         <div class="one"></div>
         <figcaption>
           <h2>Title 1</h2>
