--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="header">
-    <header>
+    <header class="wrapper">
       <nav role="navigation">
         <ul>
           <li><a href="#">Logo</a></li>
@@ -27,33 +27,36 @@
   </div>
   <!-- <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="Icecream cone man dancing"> -->
   <main>
-    <h2>Projects</h2>
-    <div class="row">
-      <figure class="main-fig">
-        <div class="one"></div>
-        <figcaption>
-          <h2>Title 1</h2>
-          <p>Description</p>
-        </figcaption>
-      </figure>
-      <figure>
-        <div class="two"></div>
-        <figcaption>
-          <h2>Title 2</h2>
-          <p>Description</p>
-        </figcaption>
-      </figure>
-      <figure>
-        <div class="three"></div>
-        <figcaption>
-          <h2>Title 3</h2>
-          <p>Description</p>
-        </figcaption>
-      </figure>
+    <div class="wrapper">
+      <!-- Add hero banner here -->
+      <h2>Projects</h2>
+      <div class="row">
+        <figure class="main-fig">
+          <div class="one"></div>
+          <figcaption>
+            <h2>Title 1</h2>
+            <p>Description</p>
+          </figcaption>
+        </figure>
+        <figure>
+          <div class="two"></div>
+          <figcaption>
+            <h2>Title 2</h2>
+            <p>Description</p>
+          </figcaption>
+        </figure>
+        <figure>
+          <div class="three"></div>
+          <figcaption>
+            <h2>Title 3</h2>
+            <p>Description</p>
+          </figcaption>
+        </figure>
+      </div>
+      <h2>About</h2>
+      <h2>Services</h2>
+      <h2>Contact</h2>
     </div>
-    <h2>About</h2>
-    <h2>Services</h2>
-    <h2>Contact</h2>
   </main>
 </body>
 </html>
