Added back dancing ice cream cone man

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       </nav>
     </header>
   </div>
-  <!-- <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="Icecream cone man dancing"> -->
   <main>
     <div class="wrapper">
       <!-- Add hero banner here -->
+      <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="Icecream cone man dancing">
       <h2>Projects</h2>
       <div class="row">
         <figure class="main-fig">
