Learning how to make practical websites

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
   <!-- <link rel="stylesheet" type="text/css" href="css/reset.css"> -->
   <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -28,8 +28,8 @@
   <main>
     <div class="wrapper">
       <!-- Add hero banner here -->
-      <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="Icecream cone man dancing">
-      <h2>Projects</h2>
+      <!-- <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="Icecream cone man dancing"> -->
+      <h1>Projects</h1>
       <div class="row">
         <figure class="main-fig">
           <div class="one"></div>
@@ -53,9 +53,9 @@
           </figcaption>
         </figure>
       </div>
-      <h2>About</h2>
-      <h2>Services</h2>
-      <h2>Contact</h2>
+      <h1>About</h1>
+      <h1>Services</h1>
+      <h1>Contact</h1>
     </div>
   </main>
 </body>
