--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
-  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet" />
   <!-- <link rel="stylesheet" type="text/css" href="css/reset.css"> -->
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <link rel="shortcut icon" href="img/favicon.ico" />
   <!-- <script src="js/script.js" defer></script> -->
 </head>
+
 <body>
   <div class="header">
     <header class="wrapper">
@@ -59,4 +61,5 @@
     </div>
   </main>
 </body>
+
 </html>
