--- a/styleguide.html
+++ b/styleguide.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
+  <title>Websites Design System</title>
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="css/guide.css" />
@@ -13,7 +13,7 @@
 
 <body>
   <div class="wrapper">
-    <h1>My Websites Style Guide</h1>
+    <h1>My Website Style Guide</h1>
     <div class="container">
       <p>Colors go here.</p>
     </div>
