--- a/index.html
+++ b/index.html
@@ -58,6 +58,35 @@
       <h1>About</h1>
       <h1>Services</h1>
       <h1>Contact</h1>
+      <form action="" method="POST">
+        <label for="cilent">Name:</label>
+        <br>
+        <input type="text" name="cilent" id="cilent" required>
+        <br>
+        <label for="email">Email:</label>
+        <br>
+        <input type="text" name="email" id="email" required>
+        <br>
+        <label for="phone">Phone:</label>
+        <br>
+        <input type="text" name="phone" id="phone" required>
+        <br>
+        <label for="service">What's this regarding:</label>
+        <br>
+        <select id="service" name="service" required>
+          <option value=""></option>
+          <option value="logo">Logo Design</option>
+          <option value="illustration">Illustrations</option>
+          <option value="poster">Poster Design</option>
+          <option value="ux">UX & UI Design</option>
+        </select>
+        <br>
+        <label for="message">Message:</label>
+        <br>
+        <textarea id="message" name="message" row="5" cols="30"></textarea>
+        <br>
+        <input type="submit" value="Send">
+      </form>
     </div>
   </main>
 </body>
