--- a/styleguide.html
+++ b/styleguide.html
@@ -15,21 +15,43 @@
   <div class="wrapper">
     <h1>My Website Style Guide</h1>
     <div class="container">
-      <p>Colors go here.</p>
+      <h2>Colors</h2>
+      <div class="colors">
+        <div>
+          <p>Color Name</p>
+          <p>Color Code</p>
+        </div>
+        <div>
+          <p>Color Name</p>
+          <p>Color Code</p>
+        </div>
+        <div>
+          <p>Color Name</p>
+          <p>Color Code</p>
+        </div>
+        <div>
+          <p>Color Name</p>
+          <p>Color Code</p>
+        </div>
+        <div>
+          <p>Color Name</p>
+          <p>Color Code</p>
+        </div>
+      </div>
     </div>
     <div class="container">
-      <p>Fonts go here.</p>
+      <h2>Fonts</h2>
     </div>
-    <div class="container">
+    <!-- <div class="container">
       <h1>This is Heading 1</h1>
       <h2>This is Heading 2</h2>
       <h3>This is Heading 3</h3>
       <h4>This is Heading 4</h4>
       <h5>This is Heading 5</h5>
       <h6>This is Heading 6</h6>
-    </div>
+    </div> -->
     <div class="container">
-      <p>Text styles go here.</p>
+      <h2>Text Styles</h2>
     </div>
   </div>
 </body>
