--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="wrapper">
       <nav role="navigation">
         <ul>
-          <li><a href="#">Logo</a></li>
+          <li><a href="styleguide.html">Logo</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Services</a></li>
