--- a/index.html
+++ b/index.html
@@ -1,94 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet" />
+    <!-- <link rel="stylesheet" type="text/css" href="css/reset.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="shortcut icon" href="img/favicon.ico" />
+    <!-- <script src="js/script.js" defer></script> -->
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
-  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet" />
-  <!-- <link rel="stylesheet" type="text/css" href="css/reset.css"> -->
-  <link rel="stylesheet" type="text/css" href="css/styles.css" />
-  <link rel="shortcut icon" href="img/favicon.ico" />
-  <!-- <script src="js/script.js" defer></script> -->
-</head>
-
-<body>
-  <div class="header">
-    <header class="wrapper">
-      <nav role="navigation">
-        <ul>
-          <li><a href="styleguide.html">Logo</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-  </div>
-  <main>
-    <div class="wrapper">
-      <!-- Add hero banner here -->
-      <!-- <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="Icecream cone man dancing"> -->
-      <h1>Projects</h1>
-      <div class="row">
-        <figure class="main-fig">
-          <div class="one"></div>
-          <figcaption>
-            <h2>Title 1</h2>
-            <p>Description</p>
-          </figcaption>
-        </figure>
-        <figure>
-          <div class="two"></div>
-          <figcaption>
-            <h2>Title 2</h2>
-            <p>Description</p>
-          </figcaption>
-        </figure>
-        <figure>
-          <div class="three"></div>
-          <figcaption>
-            <h2>Title 3</h2>
-            <p>Description</p>
-          </figcaption>
-        </figure>
-      </div>
-      <h1>About</h1>
-      <h1>Services</h1>
-      <h1>Contact</h1>
-      <form action="" method="POST">
-        <label for="cilent">Name:</label>
-        <br>
-        <input type="text" name="cilent" id="cilent" required>
-        <br>
-        <label for="email">Email:</label>
-        <br>
-        <input type="text" name="email" id="email" required>
-        <br>
-        <label for="phone">Phone:</label>
-        <br>
-        <input type="text" name="phone" id="phone" required>
-        <br>
-        <label for="service">What's this regarding:</label>
-        <br>
-        <select id="service" name="service" required>
-          <option value=""></option>
-          <option value="logo">Logo Design</option>
-          <option value="illustration">Illustrations</option>
-          <option value="poster">Poster Design</option>
-          <option value="ux">UX & UI Design</option>
-        </select>
-        <br>
-        <label for="message">Message:</label>
-        <br>
-        <textarea id="message" name="message" row="5" cols="30"></textarea>
-        <br>
-        <input type="submit" value="Send">
-      </form>
+  <body>
+    <div class="header">
+      <header class="wrapper">
+        <nav role="navigation">
+          <ul>
+            <li><a href="styleguide.html">Logo</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
     </div>
-  </main>
-</body>
-
+    <main>
+      <div class="wrapper">
+        <!-- Add hero banner here -->
+        <!-- <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="Icecream cone man dancing"> -->
+        <h1>Projects</h1>
+        <div class="row">
+          <figure class="main-fig">
+            <div class="one"></div>
+            <figcaption>
+              <h2>Title 1</h2>
+              <p>Description</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <div class="two"></div>
+            <figcaption>
+              <h2>Title 2</h2>
+              <p>Description</p>
+            </figcaption>
+          </figure>
+          <figure>
+            <div class="three"></div>
+            <figcaption>
+              <h2>Title 3</h2>
+              <p>Description</p>
+            </figcaption>
+          </figure>
+        </div>
+        <h1>About</h1>
+        <h1>Services</h1>
+        <h1>Contact</h1>
+        <form action="" method="POST">
+          <label for="cilent">Name:</label>
+          <br />
+          <input type="text" name="cilent" id="cilent" required />
+          <br />
+          <label for="email">Email:</label>
+          <br />
+          <input type="text" name="email" id="email" required />
+          <br />
+          <label for="phone">Phone:</label>
+          <br />
+          <input type="text" name="phone" id="phone" required />
+          <br />
+          <label for="service">What's this regarding:</label>
+          <br />
+          <select id="service" name="service" required>
+            <option value=""></option>
+            <option value="logo">Logo Design</option>
+            <option value="illustration">Illustrations</option>
+            <option value="poster">Poster Design</option>
+            <option value="ux">UX & UI Design</option>
+          </select>
+          <br />
+          <label for="message">Message:</label>
+          <br />
+          <textarea id="message" name="message" row="5" cols="30"></textarea>
+          <br />
+          <input type="submit" value="Send" />
+        </form>
+      </div>
+    </main>
+  </body>
 </html>
